<resources>
    <string name="app_name">AnimalTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="send_to_sign_in_button">Sign In</string>
    <string name="new_email_text">Email</string>
    <string name="new_password_text">Password</string>
    <string name="new_phone_number_text">Phone number</string>
    <string name="new_full_name_text">Full name</string>
    <string name="create_account_button">create account</string>
    <string name="display_animal_of_the_day_button">Display animal of the day</string>
    <string name="display_animals_button">Display animals</string>
    <string name="display_info_button">Display Info</string>
    <string name="phone_number_radio_button">Phone Number</string>
    <string name="name_radio_button">Name</string>
    <string name="edit_space_text">edit space</string>
    <string name="switch_to_hebrew">Switch to Hebrew</string>
    <string name="switch_to_english">Switch to English</string>

</resources>