<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.Display_Info">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Phone"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Password"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/update_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:hint="@string/edit_space_text" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_radio_button" />

        <RadioButton
            android:id="@+id/radioButtonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_radio_button" />
    </RadioGroup>

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update" />
</LinearLayout>